--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,154 @@
-name: power_spectrum
+name: nbodykit-env
 channels:
-  - conda-forge
+  - bccp
   - defaults
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - python=3.9
-  - numpy>=1.20
-  - matplotlib>=3.5
-  - scipy>=1.7
-  - h5py>=3.0
-  - pip
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
+  - astropy=4.0.2=py36h7b6447c_0
+  - atomicwrites=1.4.0=py_0
+  - attrs=21.4.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.10.0=pyh06a4308_0
+  - bigfile=0.1.51=py36hb0c69e0_7
+  - blas=1.0=mkl
+  - bokeh=2.3.2=py36h06a4308_0
+  - brotlipy=0.7.0=py36h27cfd23_1003
+  - bzip2=1.0.8=h5eee18b_6
+  - c-ares=1.19.1=h5eee18b_0
+  - ca-certificates=2024.12.31=h06a4308_0
+  - cachey=0.2.1=py36_0
+  - certifi=2021.5.30=py36h06a4308_0
+  - cffi=1.14.6=py36h400218f_0
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - classylss=0.2.9=py36hdeaf563_7
+  - click=8.0.3=pyhd3eb1b0_0
+  - cloudpickle=2.0.0=pyhd3eb1b0_0
+  - contextvars=2.4=py_0
+  - corrfunc=2.3.4=py36hb0c69e0_11
+  - coverage=5.5=py36h27cfd23_2
+  - cryptography=35.0.0=py36hd23ed53_0
+  - cython=0.29.24=py36h295c915_0
+  - cytoolz=0.11.0=py36h7b6447c_0
+  - dask=2021.3.0=pyhd3eb1b0_0
+  - dask-core=2021.3.0=pyhd3eb1b0_0
+  - distributed=2021.3.0=py36h06a4308_0
+  - fitsio=1.1.4=py36hb0c69e0_5
+  - freetype=2.12.1=h4a9f257_0
+  - fsspec=2022.1.0=pyhd3eb1b0_0
+  - future=0.18.2=py36_1
+  - giflib=5.2.2=h5eee18b_0
+  - gmp=6.3.0=h6a678d5_0
+  - gmpy2=2.0.8=py36h10f8cd9_2
+  - gsl=2.4=h14c3975_4
+  - h5py=2.10.0=py36hd6299e0_1
+  - halotools=0.7=py36hebfb2ff_5
+  - hdf5=1.10.6=hb1b8bf9_0
+  - heapdict=1.0.1=pyhd3eb1b0_0
+  - idna=3.3=pyhd3eb1b0_0
+  - immutables=0.16=py36h7f8727e_0
+  - importlib-metadata=4.8.1=py36h06a4308_0
+  - importlib_metadata=4.8.1=hd3eb1b0_0
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - intel-openmp=2022.1.0=h9e868ea_3769
+  - jinja2=3.0.3=pyhd3eb1b0_0
+  - jpeg=9e=h5eee18b_3
+  - kdcount=0.3.29=py36hb0c69e0_5
+  - krb5=1.20.1=h568e23c_1
+  - lcms2=2.16=hb9589c4_0
+  - ld_impl_linux-64=2.40=h12ee557_0
+  - lerc=4.0.0=h6a678d5_0
+  - libcurl=7.88.1=h91b91d3_2
+  - libdeflate=1.22=h5eee18b_0
+  - libedit=3.1.20230828=h5eee18b_0
+  - libev=4.33=h7f8727e_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
+  - libgomp=11.2.0=h1234567_1
+  - libnghttp2=1.52.0=ha637b67_1
+  - libopenblas=0.3.18=hf726d26_0
+  - libpng=1.6.39=h5eee18b_0
+  - libssh2=1.10.0=h37d81fd_2
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.5.1=hffd6297_1
+  - libwebp=1.3.2=h11a3e52_0
+  - libwebp-base=1.3.2=h5eee18b_1
+  - locket=0.2.1=py36h06a4308_1
+  - lz4-c=1.9.4=h6a678d5_1
+  - markupsafe=2.0.1=py36h27cfd23_0
+  - mcfit=0.0.17=py36hd8c32af_1
+  - mkl=2020.2=256
+  - mkl-service=2.3.0=py36he8ac12f_0
+  - mkl_fft=1.3.0=py36h54f3939_0
+  - mkl_random=1.1.1=py36h0573a6f_0
+  - more-itertools=8.12.0=pyhd3eb1b0_0
+  - mpc=1.3.1=h5eee18b_0
+  - mpfr=4.2.1=h5eee18b_0
+  - mpi=1.0=mpich
+  - mpi4py=3.0.3=py36h028fd6f_0
+  - mpich=3.3.2=hc856adb_0
+  - mpmath=1.2.1=py36h06a4308_0
+  - mpsort=0.1.17=py36hcaa3ba4_9
+  - msgpack-python=1.0.2=py36hff7bd54_1
+  - nbodykit=0.3.15=py36hd8c32af_6
+  - ncurses=6.4=h6a678d5_0
+  - numexpr=2.7.3=py36hb2eb853_0
+  - numpy=1.19.2=py36h54aff64_0
+  - numpy-base=1.19.2=py36hfa32c7d_0
+  - olefile=0.46=pyhd3eb1b0_0
+  - openjpeg=2.5.2=he7f1fd0_0
+  - openssl=1.1.1w=h7f8727e_0
+  - packaging=21.3=pyhd3eb1b0_0
+  - pandas=1.1.5=py36ha9443f7_0
+  - partd=1.2.0=pyhd3eb1b0_1
+  - pfft-python=0.1.21=py36hcaa3ba4_10
+  - pillow=8.3.1=py36h2c7a002_0
+  - pip=21.2.2=py36h06a4308_0
+  - pluggy=1.0.0=py36h06a4308_0
+  - pmesh=0.1.56=py36hb0c69e0_5
+  - psutil=5.8.0=py36h27cfd23_1
+  - py=1.11.0=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pysocks=1.7.1=py36h06a4308_0
+  - pytest=4.4.2=py36_0
+  - python=3.6.13=h12debd9_1
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - pytz=2021.3=pyhd3eb1b0_0
+  - pyyaml=5.4.1=py36h27cfd23_1
+  - readline=8.2=h5eee18b_0
+  - requests=2.27.1=pyhd3eb1b0_0
+  - runtests=0.0.28=py36_2
+  - scipy=1.5.2=py36h0b6359f_0
+  - setuptools=58.0.4=py36h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sortedcontainers=2.4.0=pyhd3eb1b0_0
+  - soupsieve=2.3.1=pyhd3eb1b0_0
+  - sqlite=3.45.3=h5eee18b_0
+  - sympy=1.8=py36h06a4308_0
+  - tblib=1.7.0=pyhd3eb1b0_0
+  - tk=8.6.14=h39e8969_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - toolz=0.11.2=pyhd3eb1b0_0
+  - tornado=6.1=py36h27cfd23_0
+  - typing-extensions=4.1.1=hd3eb1b0_0
+  - typing_extensions=4.1.1=pyh06a4308_0
+  - urllib3=1.26.8=pyhd3eb1b0_0
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - wurlitzer=2.1.1=py36h06a4308_0
+  - xz=5.6.4=h5eee18b_1
+  - yaml=0.2.5=h7b6447c_0
+  - zict=2.0.0=pyhd3eb1b0_0
+  - zipp=3.6.0=pyhd3eb1b0_0
+  - zlib=1.2.13=h5eee18b_1
+  - zstd=1.5.6=hc292b87_0
   - pip:
-    - bigfile>=0.1.48
-    - nbodykit>=0.3.15
-    - camb>=1.3.5 
+      - camb==1.5.2
+      - cycler==0.11.0
+      - kiwisolver==1.3.1
+      - matplotlib==3.3.4
+prefix: /home/melita-iasf/anaconda3/envs/nbodykit-env
